@@ -5725,7 +5725,7 @@ int CLASS parse_tiff (int base)
 
 void CLASS apply_tiff()
 {
-  int max_samp=0, raw=-1, thm=-1, i;
+  int max_samp=0, raw=-1, thm=-1, i,max_bps=0;
   struct jhead jh;
 
   thumb_misc = 16;
@@ -5741,6 +5741,8 @@ void CLASS apply_tiff()
     if (max_samp < tiff_ifd[i].samples)
 	max_samp = tiff_ifd[i].samples;
     if (max_samp > 3) max_samp = 3;
+    if (max_bps < tiff_ifd[i].bps)
+        max_bps = tiff_ifd[i].bps;
     if ((tiff_ifd[i].comp != 6 || tiff_ifd[i].samples != 3) &&
 	(tiff_ifd[i].t_width | tiff_ifd[i].t_height) < 0x10000 &&
 	tiff_ifd[i].t_width*tiff_ifd[i].t_height > raw_width*raw_height) {
@@ -5814,6 +5816,8 @@ void CLASS apply_tiff()
 	  tiff_bps != 14 && tiff_bps != 2048)
       || (tiff_bps == 8 && !strstr(make,"KODAK") && !strstr(make,"Kodak") &&
 	  !strstr(model2,"DEBUG RAW")))
+      is_raw = 0;
+  if(dng_version && max_bps > 166)
       is_raw = 0;
   for (i=0; i < tiff_nifds; i++)
     if (i != raw && tiff_ifd[i].samples == max_samp &&
@@ -6470,7 +6474,7 @@ void CLASS parse_redcine()
     data_offset = get4();
   }
 }
-#line 6957 "dcraw/dcraw.c"
+#line 6961 "dcraw/dcraw.c"
 void CLASS adobe_coeff (const char *p_make, const char *p_model)
 {
   static const struct {
@@ -7195,7 +7199,7 @@ short CLASS guess_byte_order (int words)
   return sum[0] < sum[1] ? 0x4d4d : 0x4949;
 }
 
-#line 7685 "dcraw/dcraw.c"
+#line 7689 "dcraw/dcraw.c"
 
 float CLASS find_green (int bps, int bite, int off0, int off1)
 {
@@ -8387,6 +8391,7 @@ wb550:
       filters = 0x16161616;
     }
   } else if (!strcmp(make,"LEICA") || !strcmp(make,"Panasonic")) {
+     if(raw_width < 1) { is_raw = 0; goto notraw; }
     if ((flen - data_offset) / (raw_width*8/7) == raw_height)
       load_raw = &CLASS panasonic_load_raw;
     if (!load_raw) {
@@ -8827,7 +8832,7 @@ else if (!strcmp(model,"QV-2000UX")) {
   }
 }
 
-#line 9410 "dcraw/dcraw.c"
+#line 9415 "dcraw/dcraw.c"
 void CLASS convert_to_rgb()
 {
   int row, col, c, i, j, k;
@@ -9046,7 +9051,7 @@ int CLASS flip_index (int row, int col)
   return row * iwidth + col;
 }
 
-#line 9653 "dcraw/dcraw.c"
+#line 9658 "dcraw/dcraw.c"
 void CLASS tiff_set (ushort *ntag,
 	ushort tag, ushort type, int count, int val)
 {
